// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HamburgerButton will open correctly 1`] = `
<div>
  <button
    className="hamburgerButton"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <img
      alt="Open Menu"
      className="hamburgerIcon"
      src="test-file-stub"
    />
  </button>
  <Menu />
</div>
`;

exports[`HamburgerButton will render correctly 1`] = `
<div>
  <button
    className="hamburgerButton"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <img
      alt="Open Menu"
      className="hamburgerIcon"
      src="test-file-stub"
    />
  </button>
</div>
`;
